# income-demo

./: .dockerignore  .env.example  .gitignore  Agents.md  Dockerfile  Makefile  README.md  USER_WORKFLOW.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/agent/: __init__.py  callbacks.py  ekyc_agent.py  ekyc_prompts.py  factory.py  kyc_workflow.py  llm.py  ocr_agent.py  prompts.py  state_store.py
app/agent/tools/: __init__.py  data_extraction.py  fraud_detection.py  government_db.py  kyc_decision.py  ocr.py  stage_tracker.py  user_tools.py
app/api/: __init__.py  auth.py  kyc.py  routes.py  schemas.py  users.py
app/db/: __init__.py  database.py  init_db.py  models.py
app/services/: __init__.py  document_storage.py  kyc_status.py  password.py
app/utils/: __init__.py  async_helpers.py
